log user reqs and swagger download file
