# src/routes/TaskRoutes.ts
@@ -16,6 +16,6 @@ router.put(`/edit`, Auth, editTask);
 router.delete(`/delete`, Auth, deleteTask);
 router.get(`/view`, Auth, viewTasks);
 router.post(`/attach-file-to-task`, Auth, attachFilesToExistingTask);
-router.get(`/file`, fileDownload);
+router.get(`/download-file`, Auth, fileDownload);
 
 export = router;
