# src/swaggerYaml/api.yaml
@@ -65,6 +65,8 @@ paths:
                 $ref: "#/components/responses/UserResponse"
         "400":
           $ref: "#/components/responses/BadRequest"
+        "404":
+          $ref: "#/components/responses/NotFound"
         "409":
           $ref: "#/components/responses/Conflict"
         "500":
@@ -177,13 +179,18 @@ paths:
         "500":
           $ref: "#/components/responses/ServerError"
   /task/edit:
-    post:
+    put:
       summary: Edit Task
-      description: Endpoint for user to edit the task
+      description: Endpoint for edit task
       security:
         - Bearer: []
-      tags:
-        - Task
+      parameters:
+        - in: query
+          name: taskId
+          required: true
+          schema:
+            type: string
+          description: The ID of the task to be edited        
       requestBody:
         required: true
         content:
@@ -194,19 +201,13 @@ paths:
         - Task
       responses:
         "200":
-          description: Task created successfully
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/responses/SimpleResponse"
+          $ref: "#/components/responses/SimpleResponse"
         "400":
           $ref: "#/components/responses/BadRequest"
         "401":
           $ref: "#/components/responses/Unauthorized"
         "404":
           $ref: "#/components/responses/NotFound"
-        "409":
-          $ref: "#/components/responses/Conflict"
         "500":
           $ref: "#/components/responses/ServerError"
   /task/delete:
@@ -254,10 +255,11 @@ paths:
                 $ref: "#/components/responses/TaskResponse"
         "401":
           $ref: "#/components/responses/Unauthorized"
-
+        "404":
+          $ref: "#/components/responses/NotFound"
         "500":
           $ref: "#/components/responses/ServerError"
-  /tasks/attach-file-to-task:
+  /task/attach-file-to-task:
     post:
       summary: Attach Files to Existing Task
       description: Endpoint to attach files to an existing task
@@ -271,7 +273,7 @@ paths:
           required: true
           schema:
             type: string
-          description: The ID of the task to attach files to
+          description: The ID of the task to attach files to task
       requestBody:
         required: true
         content:
@@ -293,8 +295,39 @@ paths:
                 $ref: "#/components/responses/SimpleResponse"
         "400":
           $ref: "#/components/responses/BadRequest"
+        "404":
+          $ref: "#/components/responses/NotFound"
         "500":
           $ref: "#/components/responses/ServerError"
+  /task/download-file:
+    get:
+      summary: Download files
+      description: User can download files of a task
+      security:
+        - Bearer: []
+      tags:
+        - Task      
+      parameters:
+        - in: query
+          name: taskId
+          required: true
+          schema:
+            type: string
+          description: The ID of the task which files to be downloaded
+      responses:
+        "200":
+          description: Files downloaded successfully
+          content:
+            application/zip:
+              schema:
+                type: string
+                format: binary
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/ServerError"             
   /report/tasks-summary:
     get:
       summary: Task Summary
@@ -440,9 +473,7 @@ paths:
                           format: date-time
                         openedTasks:
                           type: string
-                          example: "3"
-                        
-                                                
+                          example: "3"                                                
         "401":
           $ref: "#/components/responses/Unauthorized"
         "404":
